style.css
#sps{
  user-select:none;
  border-width:0 !important;
  border-style:solid !important;
  border-color:#e5e7eb
}
.sps-common{
  display:flex;
  flex-wrap:nowrap;
  align-items:center;
  height:32px
}
.sps-header{
  color:#f0f0f0;
  font-weight:600;
  line-height:1
}
#sps-main{
  border:1px solid #282828;
  border-right:0;
  bottom:90px;
  right:0;
  position:absolute
}
#sps-icon{
  display:flex;
  flex-wrap:wrap;
  justify-content:center;
  width:2rem;
  height:2rem
}
#sps-controls{
  padding:.5rem .75rem;
  background-color:#171717;
  width:320px
}
#sps-settings{
  width:240px;
  padding:.5rem .75rem;
  background-color:#171717
}
#sps-settings input{
  margin-left:.5rem;
  width:56px;
  border-radius:.125rem;
  padding-left:.125rem;
  padding-right:.125rem;
  text-align:center;
  font-size:.875rem
}
.sps-text-button:hover{
  background-color:#9B9B9B;
  cursor:pointer
}
#sps button:hover{
  cursor:pointer
}
#sps button,#sps input{
  border-width:0 !important;
  border-style:solid !important;
  border-color:#e5e7eb
}
#sps button:disabled{
  cursor:not-allowed
}

#sps input[type=number]{
  border-radius:.125rem;
  text-align:center;
  font-size:.875rem;
}

#sps input[type=number]::-webkit-outer-spin-button,
#sps input[type=number]::-webkit-inner-spin-button{
  -webkit-appearance:none;
  margin:0
}
#sps input[type=number]:focus{
  outline:0
}
#sps input[type=range]{
  -webkit-appearance:none;
  width:100%;
  height:6px;
  background:#494949;
  border-radius:.375rem;
  background-image:linear-gradient(#fff,#fff);
  background-size:70% 100%;
  background-repeat:no-repeat
}
#sps input[type=range]:hover{
  background-image:linear-gradient(#2edb64,#2edb64)
}
#sps input[type=range]::-webkit-slider-thumb{
  -webkit-appearance:none
}
#sps input[type=range]::-webkit-slider-runnable-track{
  width:calc(100% + 16px);
  height:6px;
  padding:8px 0;
  background:transparent
}
#sps input[type=range]:hover::-webkit-slider-runnable-track{
  cursor:ew-resize
}
#sps input[type=range]:hover::-webkit-slider-thumb{
  display:block;
  cursor:ew-resize
}
#sps input[type=range]::-webkit-slider-thumb{
  display:none;
  -webkit-appearance:none;
  border-radius:50%;
  height:14px;
  width:14px;
  background:white;
  box-shadow:0 4px 6px -1px rgb(0 0 0 / .1),0 2px 4px -2px rgb(0 0 0 / .1);
  margin-top:-7px
}
.sps-icon-active,.sps-icon-active:hover{
  color:#2edb64
}
.sps-hover-white:hover{
  color:#FFF
}
.sps-text-button{
  background-color:#535353;
  color:white;
  font-weight:600;
  font-size:.625rem;
  padding:.125rem .25rem;
  border-radius:.125rem
}
text{
  font-size: .625rem;
}

